test_regress/t/t_with.out
%Error-UNSUPPORTED: t/t_with.v:19:23: Unsupported/unknown built-in queue method 'find'
                                    : ... In instance t
   19 |       found = aliases.find(i) with (i == tofind);
      |                       ^~~~
%Error-UNSUPPORTED: t/t_with.v:21:15: Unsupported/unknown built-in queue method 'find'
                                    : ... In instance t
   21 |       aliases.find(i) with (i == tofind);
      |               ^~~~
%Error-UNSUPPORTED: t/t_with.v:24:23: Unsupported/unknown built-in queue method 'find'
                                    : ... In instance t
   24 |       found = aliases.find with (item == i);
      |                       ^~~~
%Error-UNSUPPORTED: t/t_with.v:25:15: Unsupported/unknown built-in queue method 'find'
                                    : ... In instance t
   25 |       aliases.find with (item == i);
      |               ^~~~
%Error-UNSUPPORTED: t/t_with.v:29:23: Unsupported/unknown built-in queue method 'unique'
                                    : ... In instance t
   29 |       found = aliases.unique with (id);
      |                       ^~~~~~
%Error-UNSUPPORTED: t/t_with.v:30:23: Unsupported/unknown built-in queue method 'unique'
                                    : ... In instance t
   30 |       found = aliases.unique() with (id);
      |                       ^~~~~~
%Error-UNSUPPORTED: t/t_with.v:31:23: Unsupported/unknown built-in queue method 'unique'
                                    : ... In instance t
   31 |       found = aliases.unique(i) with (id);
      |                       ^~~~~~
%Error-UNSUPPORTED: t/t_with.v:32:19: Unsupported/unknown built-in queue method 'or'
                                    : ... In instance t
   32 |       i = aliases.or(v) with (v);
      |                   ^~
%Error-UNSUPPORTED: t/t_with.v:33:19: Unsupported/unknown built-in queue method 'and'
                                    : ... In instance t
   33 |       i = aliases.and(v) with (v);
      |                   ^~~
%Error-UNSUPPORTED: t/t_with.v:34:19: Unsupported/unknown built-in queue method 'xor'
                                    : ... In instance t
   34 |       i = aliases.xor(v) with (v);
      |                   ^~~
%Error: Exiting due to
